--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@react-navigation/native": "^5.9.2",
     "@react-navigation/stack": "^5.14.2",
     "axios": "^0.21.1",
+    "galio-framework": "^0.7.1",
     "moment": "^2.29.1",
+    "native-base": "^2.15.2",
     "react": "16.13.1",
     "react-native": "0.63.4",
     "react-native-dotenv": "^2.5.3",
@@ -24,6 +26,7 @@
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.17.1",
+    "react-native-svg": "^12.1.0",
     "react-native-vector-icons": "^8.0.0"
   },
   "devDependencies": {
