--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/stack": "^5.14.2",
     "axios": "^0.21.1",
     "galio-framework": "^0.7.1",
+    "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "react": "16.13.1",
     "react-native": "0.63.4",
