--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@react-native-async-storage/async-storage": "^1.13.4",
     "@react-native-community/datetimepicker": "^3.0.9",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-firebase/app": "^11.1.0",
+    "@react-native-firebase/auth": "^11.1.0",
     "@react-navigation/bottom-tabs": "^5.11.8",
     "@react-navigation/native": "^5.9.2",
     "@react-navigation/stack": "^5.14.2",
