--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -26,3 +26,9 @@ android.enableJetifier=true
 
 # Version of flipper SDK to use with React Native
 FLIPPER_VERSION=0.54.0
+
+# Keystore
+MYAPP_UPLOAD_STORE_FILE=bizzyness-upload-key.keystore
+MYAPP_UPLOAD_KEY_ALIAS=bizzyness-key
+MYAPP_UPLOAD_STORE_PASSWORD=erp101
+MYAPP_UPLOAD_KEY_PASSWORD=erp101
