--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -38,3 +38,9 @@ reactNativeArchitectures=armeabi-v7a,arm64-v8a,x86,x86_64
 # to write custom TurboModules/Fabric components OR use libraries that
 # are providing them.
 newArchEnabled=false
+
+# Keystore
+MYAPP_UPLOAD_STORE_FILE=bizzyness-upload-key.keystore
+MYAPP_UPLOAD_KEY_ALIAS=bizzyness-key
+MYAPP_UPLOAD_STORE_PASSWORD=erp101
+MYAPP_UPLOAD_KEY_PASSWORD=erp101
